# squawkcpp

./: CMakeLists.txt  Doxyfile.in  re2.cmake  squawkmain.cpp  testmain.cpp
cds/: CMakeLists.txt
cmake/Modules/: FindFlac++.cmake  FindID3.cmake  FindImlib2.cmake  FindLame.cmake  FindLog4cxx.cmake  FindPoppler.cmake  FindS3.cmake
config/: squawk-default  squawk-init-script  squawk-template.xml  squawk.properties  squawk.xml  squawk2.xml
doc/htmlincludes/: tag_frame_reference.html
docroot/: ConnectionMgr.xml  ContentDir.xml  X_MS_MediaReceiverRegistrar.xml  album.css  api.html  index.html  squawk.js  squawk.raml  style.css
docroot/js/: application.js  controllers.js  directives.js
docroot/templates/: about.html  admin.html  album-item.html  album-list.html  artist-list.html  aside-menu.html  book-item.html  browse.html  config.html  movie-item.html  query.html  search-menu.html  series.html  statistic.html  upnpevents.html  video-item.html  video-list.html
gui/: CMakeLists.txt  squawk_gui.cpp  squawk_gui.h
src/: api.h  config.cpp  config.h  dao.h  database.h  package.h  scanner.cpp  scanner.h  squawk.h  squawkserver.cpp  squawkserver.h  upnpcontentdirectory.cpp  upnpcontentdirectory.h  upnpcontentdirectoryimage.cpp  upnpcontentdirectoryimage.h  upnpcontentdirectorymusic.cpp  upnpcontentdirectoryparser.cpp  upnpcontentdirectoryparser.h  upnpcontentdirectoryvideo.cpp  upnpcontentdirectoryvideo.h  upnpmediaservlet.cpp  upnpmediaservlet.h
src/doc/: toc.h
src/libav/: libav.cpp  libav.h  libavwrapper.cpp  libavwrapper.h
src/ssdp/: ssdp.h  ssdpserverimpl.cpp  ssdpserverimpl.h
src/ssdp/asio/: ssdpclientconnection.cpp  ssdpclientconnection.h  ssdpserverconnection.cpp  ssdpserverconnection.h
src/upnp/: cds.cpp  cds.h  cms.cpp  cms.h  description.h  didlwriter.cpp  didlwriter.h  upnp.h  upnpheaders.cpp  upnpheaders.h
src/utils/: amazonfacade.cpp  amazonfacade.h  audio.cpp  audio.h  aws.cpp  bookresultitem.h  dynamicrange.cpp  dynamicrange.h  epubparser.cpp  epubparser.h  googlebooks.cpp  googlebooks.h  httpdownloader.cpp  httpdownloader.h  libav.cpp  libav.h  pdfparser.cpp  pdfparser.h  textutils.cpp  textutils.h  tmdb.cpp  tmdb.h  xml.h
test/: TestConfig.xml  amazonfacadetest.cpp  apitest.cpp  databasetest.cpp  dynamicrangetest.cpp  epubparsertest.cpp  googlebookstest.cpp  isbnparsertest.cpp  libavtest.cpp  libavtest2.cpp  parseoptionstest.cpp  sqlite3connectionmanagertest.cpp  ssdpheaderparsetest.cpp  ssdptimertest.cpp  textutilstest.cpp  tmdbtest.cpp  upnpconnectionmanagertest.cpp  upnptest.cpp  xmlparsetest.cpp  xmlwritertest.cpp
